--- a/projects/test/none-dynamic/host/test-none-dynamic-host/build.gradle
+++ b/projects/test/none-dynamic/host/test-none-dynamic-host/build.gradle
@@ -27,6 +27,8 @@ android {
     sourceSets {
         debug {
             assets.srcDir('build/generated/assets/test-plugin-general-cases/debug/')
+            assets.srcDir('build/generated/assets/none-dynamic-room-plugin1/debug/')
+            assets.srcDir('build/generated/assets/none-dynamic-room-plugin2/debug/')
         }
         release {
             assets.srcDir('build/generated/assets/test-plugin-general-cases/release/')
@@ -71,5 +73,7 @@ def createCopyTask(projectName, buildType, name, apkName) {
 tasks.whenTaskAdded { task ->
     if (task.name == "generateDebugAssets") {
         task.dependsOn createCopyTask(':test-plugin-general-cases', 'debug', 'test-plugin-general-cases', 'plugin.apk')
+        task.dependsOn createCopyTask(':none-dynamic-room-plugin1', 'debug', 'none-dynamic-room-plugin1', 'plugin1.apk')
+        task.dependsOn createCopyTask(':none-dynamic-room-plugin2', 'debug', 'none-dynamic-room-plugin2', 'plugin2.apk')
     }
 }
