--- a/projects/test/none-dynamic/host/test-none-dynamic-host/build.gradle
+++ b/projects/test/none-dynamic/host/test-none-dynamic-host/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'commons-io:commons-io:2.5'//example复制apk用的.
     implementation 'org.slf4j:slf4j-api:1.7.25'
 
+    implementation 'androidx.room:room-runtime:2.2.6'
+
     implementation 'com.tencent.shadow.core:common'
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.tencent.shadow.core:loader'
