--- a/projects/test/none-dynamic/none-dynamic-room-plugin2/build.gradle
+++ b/projects/test/none-dynamic/none-dynamic-room-plugin2/build.gradle
@@ -40,7 +40,8 @@ android {
 dependencies {
     pluginCompileOnly 'com.tencent.shadow.core:runtime'
 
-    implementation 'androidx.room:room-runtime:2.2.6'
+    pluginCompileOnly 'androidx.room:room-runtime:2.2.6'
+    normalImplementation 'androidx.room:room-runtime:2.2.6'
     kapt 'androidx.room:room-compiler:2.2.6'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
