--- a/projects/test/none-dynamic/none-dynamic-room-plugin1/build.gradle
+++ b/projects/test/none-dynamic/none-dynamic-room-plugin1/build.gradle
@@ -40,9 +40,12 @@ dependencies {
 
     pluginCompileOnly 'com.tencent.shadow.core:runtime'
 
+    pluginCompileOnly project(':room-base-lib')
+    normalImplementation project(':room-base-lib')
+
     pluginCompileOnly 'androidx.room:room-runtime:2.2.6'
     normalImplementation 'androidx.room:room-runtime:2.2.6'
-    kapt 'androidx.room:room-compiler:2.2.6'
+
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
