--- a/projects/test/none-dynamic/none-dynamic-room-plugin2/src/main/AndroidManifest.xml
+++ b/projects/test/none-dynamic/none-dynamic-room-plugin2/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hzl.none_dynamic_room_plugin2">
+    package="com.tencent.shadow.none_dynamic_room_plugin2">
 
     <application
-        android:name=".AApp"
+        android:name="com.tencent.shadow.none_dynamic_room_plugin2.AApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shadow" >
-        <activity android:name="com.hzl.none_dynamic_room_plugin2.MainAct" />
+        <activity android:name="com.tencent.shadow.none_dynamic_room_plugin2.MainAct" />
     </application>
 
 </manifest>
