--- a/projects/test/none-dynamic/room-base/build.gradle
+++ b/projects/test/none-dynamic/room-base/build.gradle
@@ -1,14 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.tencent.shadow.plugin'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
 
 android {
-
     compileSdkVersion project.COMPILE_SDK_VERSION
 
     defaultConfig {
-        applicationId "com.hzl.none_dynamic_room_plugin2"
+        applicationId "com.hzl.room_base"
         minSdkVersion project.MIN_SDK_VERSION
         targetSdkVersion project.TARGET_SDK_VERSION
         versionCode project.VERSION_CODE
@@ -27,24 +25,22 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     productFlavors {
         plugin {
             applicationId project.TEST_HOST_APP_APPLICATION_ID
         }
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 }
 
 dependencies {
+
     pluginCompileOnly 'com.tencent.shadow.core:runtime'
 
-    pluginCompileOnly project(':room-base-lib')
-    normalImplementation project(':room-base-lib')
 
-    pluginCompileOnly 'androidx.room:room-runtime:2.2.6'
-    normalImplementation 'androidx.room:room-runtime:2.2.6'
+    implementation project(':room-base-lib')
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -53,6 +49,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
 
 buildscript {
     repositories {
