--- a/projects/test/none-dynamic/room-base/src/main/AndroidManifest.xml
+++ b/projects/test/none-dynamic/room-base/src/main/AndroidManifest.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tencent.shadow.none_dynamic_room_plugin1">
+    package="com.hzl.room_base">
 
     <application
-        android:name="com.tencent.shadow.none_dynamic_room_plugin1.BApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Shadow" >
-        <activity android:name="com.tencent.shadow.none_dynamic_room_plugin1.MainAct" />
-    </application>
+        android:theme="@style/Theme.Shadow" />
 
 </manifest>
